--- a/README
+++ b/README
@@ -63,15 +63,27 @@ USAGE
     they are planned for an eventual future version.
 
     EOL A string containing the characters that should be printed on a
-        socket to cause perl to emit an RFC-compliant CRLF. On some systems
-        this may need to be set to "\r\n". The default is "\n", which is
-        what it needs to be on my development platform (Linux Mandrake 9.2).
-        Setting it to the wrong thing causes breakage either way, so
-        experiment. (Fixing this to Just Work(TM) on all systems is on the
-        Todo list.)
+        socket to cause perl to emit an RFC-compliant CRLF. The new default
+        is "\015\012", which theoretically should work perfectly everywhere,
+        from what I have read, but if you get mangled newlines, this may be
+        why. This new default needs testing on as many platforms as possible
+        to ensure that it is, in fact, correct everywhere.
 
-        The EOL string is optional; you only need to specify it if "\n" is
-        the wrong value.
+        The default used to be "\n", which worked on my development platform
+        (Linux Mandrake 9.2). On some systems this needed to be set to
+        "\r\n". Setting it to the wrong thing caused breakage either way. If
+        the default doesn't work for you, experiment. If you set it to
+        "\r\n" on systems where "\n" will work, you get extraneous ^M
+        characters on the ends of all the lines at the recieving end, which
+        among other things can cause most of the headers not to be
+        recognized as such and instead to be displayed in the body,
+        depending on the mail client. Going the other way, if you set it to
+        "\n" on platforms where "\r\n" would work correctly, the whole thing
+        may just not work at all, or other weirdness may ensue, such as the
+        entire message (headers, body, and all) appearing on one line.
+
+        The EOL string is optional; you only need to specify it if the
+        default is the wrong value.
 
     port
         The port number to listen on. 110 is the default. The user or group
@@ -268,23 +280,26 @@ USAGE
 
         The DEBUG level is optional. The default is 0.
 
+    linetimeout
+        Give the mail client (or user) this many seconds to type or send
+        each line. My reading of RFC1939 is that this shouldn't be less than
+        ten minutes (at least, between commands), but Net::Server::POP3 does
+        not enforce this minimum.
+
+        The linetimeout is optional. The default is currently 600 (ten
+        minutes), the minimum specified by the RFC. The default value may
+        change in a future version.
+
 REQUIRES
     Net::Server, Exporter
 
 BUGS
-    line endings
-        Depending on your platform and possibly your perl version, you might
-        need to change $EOL to "\r\n" instead of "\n". However, if your perl
-        version already handles this the way mine does (Linux Mandrake 9.2),
-        changing it to "\r\n" will break it, resulting in the mail client
-        only seeing the first header you send as a header and viewing the
-        rest of the headers as part of the body, which is ugly; in that case
-        you should use "\n". You can now pass an EOL parameter to new or to
-        startserver for this, until I figure out how to fix it for real.
-
-    client IP address
-        The authenticate callback was not passed the client's IP address as
-        documented, but I think this is fixed now.
+    DEBUG makes authentication fail
+        This is really bad, and I hope to fix it very soon. My apologies to
+        anyone who has been bitten by this. The gplproxy example has
+        uncovered a bug wherein passing a nonzero value for DEBUG to new (or
+        probably also startserver) causes authentication to fail. Fixing
+        this will be top priority for the next release.
 
     APOP is not implemented yet.
     stopserver and restartserver are not implemented
@@ -320,6 +335,24 @@ BUGS
         returns strings with octet symantics; I do not know whether this is
         actually the case. At minimum, this could cause the sizes of the
         messages to be reported incorrectly (e.g. by LIST).
+
+    client IP address
+        The authenticate callback was not passed the client's IP address as
+        documented, but I think this is fixed now.
+
+    line endings
+        I think the new default value for EOL fixes this bug, but I'm
+        leaving the old information here until I confirm that:
+
+        Depending on your platform and possibly your perl version, you might
+        need to set the EOL to "\r\n" instead of the default "\n". However,
+        if your perl version already handles this the way mine does (Linux
+        Mandrake 9.2), setting it to "\r\n" will break it, resulting in the
+        mail client only seeing the first header you send as a header and
+        viewing the rest of the headers as part of the body, which is ugly;
+        in that case you should use "\n". You can now pass an EOL parameter
+        to new or to startserver for this, until I figure out how to fix it
+        for real. The default is "\n" if you don't specify.
 
     Caveat user
         There may be other bugs as well; this is not release-quality code
@@ -369,6 +402,8 @@ SEE ALSO
     simpletest.pl
 
     proxytest.pl
+
+    gplproxy.pl
 
     For a more minimalist framework with a different interface, see
     Net::Server::POP3::Skeleton
